--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -1,10 +1,13 @@
 // Fonts
-$font: Arial, "Helvetica Neue", Helvetica, sans-serif;
+$font:"Bellota Text";
 
 $h1-fz-mobile: 20px;
 $h1-fz-tablet: 32px;
 $h1-fz-desktop: 48px;
 $h1-fw: 400;
+
+$gap:420px;
+$gap-half:calc($gap/2);
 
 // colors
 
